# HkiaRagWikiAssistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  sync.py
agent/: __init__.py  extraction.py  graph.py  llm.py  nodes.py  prompts.py  retrieval.py  state.py  tools.py
app/: __init__.py  gradio_app.py
common/: http.py
config/: __init__.py  logging_config.py  settings.py
data/eval/: golden_set.json  golden_set_revised.json
data/eval/traces/: e1_baseline_recursive_joined.csv  e1_baseline_recursive_summary.csv
docs/: ARCHITECTURE.md  HKIA_RAG_PRD.md  HKIA_RAG_TDD.md
eval/: __init__.py  dataset.py  generate.py  runner.py  scorers.py
ingestion/: __init__.py  api_client.py  chunker.py  embedder.py  parser.py  pipeline.py  snapshot.py  state_db.py
scripts/: cleanup_boilerplate_chunks.py  export_e1_traces.py  export_traces.py  generate_eval_dataset.py  run_ablation_ingestion.py  run_eval.py  run_experiments.py  snapshot_wiki.py
tests/: __init__.py  conftest.py  test_agent_cycle_detection.py  test_api_client.py  test_chunker.py  test_chunking_drift_detection.py  test_dataset.py  test_embedder.py  test_embedding_version_guard.py  test_entity_resolution.py  test_generate.py  test_gradio_app.py  test_http_retries.py  test_ingestion_idempotency.py  test_llm_dispatch.py  test_parser.py  test_pipeline_replay.py  test_retrieval_logging.py  test_runner.py  test_scorers.py  test_snapshot_roundtrip.py  test_state_db.py  test_vectorstore.py
vectorstore/: __init__.py  client.py  schema.py
