[project]
name = "hkia-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "chromadb>=0.5",
    "mwparserfromhell>=0.6",
    "mlflow>=3.0",
    "gradio>=4.0",
    "ollama>=0.2",
    "openai>=1.0",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.83.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
log_file = "logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s %(levelname)s %(name)s %(filename)s:%(lineno)d — %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pydantic-settings>=2.13.1",
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.15.8",
]
