[project]
name = "hkia-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # LangGraph / LangChain are pinned to a single minor each: their
    # 0.x→1.x transitions historically broke public APIs, so a wide
    # ``<2.0`` upper bound would invite a silent breakage on the next
    # minor bump. Re-evaluate these when intentionally upgrading.
    "langgraph>=1.1,<1.2",
    "langchain>=1.2.15,<1.3",
    "langchain-core>=1.2,<1.3",
    "langchain-text-splitters>=1.1.1,<1.2",
    "chromadb>=0.5,<2.0",
    "mwparserfromhell>=0.6,<1.0",
    "mlflow>=3.0,<4.0",
    "gradio>=4.0,<7.0",
    "ollama>=0.2,<1.0",
    "openai>=1.0,<3.0",
    "tenacity>=8.0,<10.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    # litellm is not imported directly by this project — it is a
    # required runtime dep of MLflow's GenAI scorers (Summarization,
    # RetrievalGroundedness, etc. in eval/runner.py). MLflow does not
    # transitively pull it in on every install path, so we list it
    # explicitly here. Removing it surfaces as a runtime ImportError
    # the first time mlflow.genai.evaluate runs the LLM judges.
    "litellm>=1.83.14,<2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
log_file = "logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s %(levelname)s %(name)s %(filename)s:%(lineno)d — %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[dependency-groups]
dev = [
    "mypy>=1.20.0,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-mock>=3.0,<4.0",
    "ruff>=0.15.8,<1.0",
]
